--- a/frontend/public/css/style.css
+++ b/frontend/public/css/style.css
@@ -32,7 +32,7 @@ body {
 
 h1,
 h2 {
-  font-family: 'Dancing Script', cursive;
+  /* font-family: 'Dancing Script', cursive; */
 }
 
 .heading_container {
@@ -145,9 +145,9 @@ a:focus {
   padding-left: 25px;
 }
 
-.navbar-brand {
+/* .navbar-brand {
   font-family: 'Dancing Script', cursive;
-}
+} */
 
 .navbar-brand span {
   font-weight: bold;
@@ -765,7 +765,7 @@ a:focus {
 
 .footer_section .footer-brand {
   font-size: 3rem;
-  font-family: 'Dancing Script', cursive;
+  /* font-family: 'Dancing Script', cursive; */
   color: #ffffff;
   display: inline-block;
   margin-bottom: 20px;
